--- a/deploy/overlays/dev/Kustomization.yaml
+++ b/deploy/overlays/dev/Kustomization.yaml
@@ -5,7 +5,8 @@ metadata:
 namespace: demo-app-dev
 nameSuffix: -dev
 resources:
-- ../../bases/demo-app
+- ../../bases/demo-app/deployment.yaml
+- ../../bases/demo-app/service.yaml
 - namespace.yaml
 # transformers:
 # - labels.yaml
