--- a/deploy/bases/demo-app/deployment.yaml
+++ b/deploy/bases/demo-app/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: hello-eks-a
-  #namespace: test-application
+  namespace: demo-app-dev
   labels:
     app: hello-eks-a
 spec:
