--- a/deploy/bases/demo-app/service.yaml
+++ b/deploy/bases/demo-app/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: hello-eks-a
-  #namespace: test-application
+  namespace: demo-app-dev
 spec:
   type: NodePort
   selector:
